[gd_scene load_steps=2 format=3 uid="uid://cnt4ssbwa1pbx"]

[ext_resource type="Script" uid="uid://bqpnx6s3fvsqv" path="res://Scripts/questionscene.gd" id="1_7peqh"]

[node name="QuestionScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7peqh")
metadata/_custom_type_script = "uid://bqpnx6s3fvsqv"
