[gd_scene load_steps=3 format=3 uid="uid://b1fmfftet4j76"]

[ext_resource type="Script" uid="uid://bqpnx6s3fvsqv" path="res://Scripts/questionscene.gd" id="1_k7lh0"]
[ext_resource type="Texture2D" uid="uid://cg747nqovt6ao" path="res://Textures/chatbox.png" id="4_e2mst"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k7lh0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -349.0
offset_bottom = 243.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -25

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 220
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Answer the Question 
before the timer runs out"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer2/MarginContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("4_e2mst")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(499, 122)
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 40
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
texture = ExtResource("4_e2mst")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
texture = ExtResource("4_e2mst")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2
texture = ExtResource("4_e2mst")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer4"]
layout_mode = 2
texture = ExtResource("4_e2mst")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer4/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer5" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer5"]
layout_mode = 2
texture = ExtResource("4_e2mst")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer5"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer5/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 35
text = "Quit"

[connection signal="pressed" from="Button" to="." method="_on_quit_pressed"]
